--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <script src="./brs_chatbot.js"></script>
+    <script src="https://babahironobu.github.io/chatbot/brs_chatbot.js"></script>
 </body>
 
 </html>
